--- a/public/tour.css
+++ b/public/tour.css
@@ -67,6 +67,10 @@ td > a:hover {
     margin-top: 1em;
 }
 
+.bruit {
+    margin-top: 1em;
+}
+
 .butcher {
     margin-top: 1em;
 }
@@ -135,6 +139,10 @@ td > a:hover {
     margin-top: 1em;
 }
 
+.snooper {
+    margin-top: 1em;
+}
+
 .speedy {
     margin-top: 1em;
 }
@@ -190,6 +198,10 @@ td > a:hover {
     }
     
     .billie {
+        margin-top: 1em;
+    }
+
+    .bruit {
         margin-top: 1em;
     }
     
@@ -258,6 +270,10 @@ td > a:hover {
     }
     
     .pulp {
+        margin-top: 1em;
+    }
+
+    .snooper {
         margin-top: 1em;
     }
     
