--- a/views/tour.ejs
+++ b/views/tour.ejs
@@ -27,6 +27,13 @@
                             <script charset="utf-8" src="https://widget.bandsintown.com/main.min.js"></script><a class="bit-widget-initializer" data-artist-name="Billie Marten" data-display-local-dates="false" data-display-past-dates="false" data-auto-style="false" data-text-color="#D9D9D9" data-link-color="#B6CC38" data-background-color="rgba(0,0,0,0)" data-display-limit="100" data-display-start-time="false" data-link-text-color="#B6CC38" data-display-lineup="false" data-display-play-my-city="false" data-separator-color="rgba(124,124,124,0.25)" data-display-logo="false" data-display-track-button="false"></a>                                                               
                         </table>
                     </div>
+
+                    <div class="bruit">
+                        <button class="band bruit">Bruit ≤</button>
+                        <table class="table table-responsive bruit-table" style="display: none;">
+                            <script charset="utf-8" src="https://widget.bandsintown.com/main.min.js"></script><a class="bit-widget-initializer" data-artist-name="Bruit" data-display-local-dates="false" data-display-past-dates="false" data-auto-style="false" data-text-color="#D9D9D9" data-link-color="#000000" data-background-color="rgba(0,0,0,0)" data-display-limit="100" data-display-start-time="false" data-link-text-color="#B6CC38" data-display-lineup="false" data-display-play-my-city="false" data-separator-color="rgba(124,124,124,0.25)" data-display-logo="false" data-display-track-button="false"></a>  
+                        </table>
+                    </div>  
                     
                     <div class="butcher">
                         <button class="band butcher">Butcher Brown</button>
@@ -146,6 +153,13 @@
                             <script charset="utf-8" src="https://widget.bandsintown.com/main.min.js"></script><a class="bit-widget-initializer" data-artist-name="Slow Pulp" data-display-local-dates="false" data-display-past-dates="false" data-auto-style="false" data-text-color="#D9D9D9" data-link-color="#000000" data-background-color="rgba(0,0,0,0)" data-display-limit="100" data-display-start-time="false" data-link-text-color="#B6CC38" data-display-lineup="false" data-display-play-my-city="false" data-separator-color="rgba(124,124,124,0.25)" data-display-logo="false" data-display-track-button="false"></a>  
                         </table>
                     </div>
+
+                    <div class="snooper">
+                        <button class="band snooper">Snooper</button>
+                        <table class="table table-responsive snooper-table" style="display: none;">
+                            <script charset="utf-8" src="https://widget.bandsintown.com/main.min.js"></script><a class="bit-widget-initializer" data-artist-name="Snooper" data-display-local-dates="false" data-display-past-dates="false" data-auto-style="false" data-text-color="#D9D9D9" data-link-color="#000000" data-background-color="rgba(0,0,0,0)" data-display-limit="100" data-display-start-time="false" data-link-text-color="#B6CC38" data-display-lineup="false" data-display-play-my-city="false" data-separator-color="rgba(124,124,124,0.25)" data-display-logo="false" data-display-track-button="false"></a>  
+                        </table>
+                    </div>  
 
                     <div class="speedy">
                         <button class="band speedy">Speedy Ortiz</button>
