--- a/public/tour.css
+++ b/public/tour.css
@@ -151,6 +151,10 @@ td > a:hover {
     margin-top: 1em;
 }
 
+.suuns {
+    margin-top: 1em;
+}
+
 .tapir {
     margin-top: 1em;
 }
@@ -282,6 +286,10 @@ td > a:hover {
     }
     
     .spits {
+        margin-top: 1em;
+    }
+
+    .suuns {
         margin-top: 1em;
     }
     
