--- a/views/tour.ejs
+++ b/views/tour.ejs
@@ -126,6 +126,13 @@
                         </table>
                     </div> 
 
+                    <div class="model">
+                        <button class="band model">Model / Actriz</button>
+                        <table class="table table-responsive model-table" style="display: none;">
+                            <script charset="utf-8" src="https://widget.bandsintown.com/main.min.js"></script><a class="bit-widget-initializer" data-artist-name="id_13637827" data-display-local-dates="false" data-display-past-dates="false" data-auto-style="false" data-text-color="#D9D9D9" data-link-color="#000000" data-background-color="rgba(0,0,0,0)" data-display-limit="100" data-display-start-time="false" data-link-text-color="#B6CC38" data-display-lineup="false" data-display-play-my-city="false" data-separator-color="rgba(124,124,124,0.25)" data-display-logo="false" data-display-track-button="false"></a>  
+                        </table>
+                    </div>  
+
                      <div class="pup">
                         <button class="band pup">PUP</button>
                         <table class="table table-responsive pup-table" style="display: none;">
