--- a/public/tour.css
+++ b/public/tour.css
@@ -13,7 +13,6 @@ h1 {
 
 button {
     border: none;
-    padding: .5em;
     border-radius: 1em;
 }
 
@@ -28,7 +27,6 @@ button a:hover {
 
 .band {
     color: #B6CC38;
-    margin-bottom: 1em;
     background: black;
     font-size: 4em;
     text-transform: uppercase;
@@ -42,7 +40,7 @@ td > a:hover {
     color: #D9D9D9;
 }
 
-.table, .tables {
+.tables {
     background: black;
     margin: auto;
     width: 50%;
@@ -57,126 +55,6 @@ td > a:hover {
 
 .footer {
     margin-top: 15em;
-}
-
-.fifteen {
-    margin-top: 0em;
-}
-
-.billie {
-    margin-top: 1em;
-}
-
-.bruit {
-    margin-top: 1em;
-}
-
-.butcher {
-    margin-top: 1em;
-}
-
-.chastity {
-    margin-top: 1em;
-}
-
-.cloud {
-    margin-top: 1em;
-}
-
-.disintegration {
-    margin-top: 1em;
-}
-
-.frost {
-    margin-top: 1em;
-}
-
-.genn {
-    margin-top: 1em;
-}
-
-.robbins {
-    margin-top: 1em;
-}
-
-.john {
-    margin-top: 1em;
-}
-
-.julia {
-    margin-top: 1em;
-}
-
-.kent {
-    margin-top: 1em;
-}
-
-.lambrini {
-    margin-top: 1em;
-}
-
-.lysistrata {
-    margin-top: 1em;
-}
-
-.mj {
-    margin-top: 1em;
-}
-
-.model {
-    margin-top: 1em;
-}
-
-.pup {
-    margin-top: 1em;
-}
-
-.roller {
-    margin-top: 1em;
-}
-
-.sea {
-    margin-top: 1em;
-}
-
-.pulp {
-    margin-top: 1em;
-}
-
-.snooper {
-    margin-top: 1em;
-}
-
-.speedy {
-    margin-top: 1em;
-}
-
-.spits {
-    margin-top: 1em;
-}
-
-.suuns {
-    margin-top: 1em;
-}
-
-.tapir {
-    margin-top: 1em;
-}
-
-.thus {
-    margin-top: 1em;
-}
-
-.ultra {
-    margin-top: 1em;
-}
-
-.water {
-    margin-top: 1em;
-}
-
-.wednesday {
-    margin-top: 1em;
 }
 
 @media screen and (min-width: 0px) and (max-width: 1024px)  { 
@@ -266,7 +144,7 @@ td > a:hover {
     }
 
     .model {
-    margin-top: 1em;
+        margin-top: 1em;
     }
     
     .pup {
