adding past clients list

--- a/public/tour.css
+++ b/public/tour.css
@@ -61,6 +61,10 @@ td > a:hover {
     color: #B6CC38;
 }
 
+h2 {
+    padding-top: 15rem;
+}
+
 @media screen and (min-width: 0px) and (max-width: 1024px)  { 
     h1 {
         display: none;
