--- a/views/tour.ejs
+++ b/views/tour.ejs
@@ -45,14 +45,6 @@
                             <script charset="utf-8" src="https://widget.bandsintown.com/main.min.js"></script><a class="bit-widget-initializer" data-artist-name="Butcher Brown" data-display-local-dates="false" data-display-past-dates="false" data-auto-style="false" data-text-color="#D9D9D9" data-link-color="#B6CC38" data-background-color="rgba(0,0,0,0)" data-display-limit="100" data-display-start-time="false" data-link-text-color="#B6CC38" data-display-lineup="false" data-display-play-my-city="false" data-separator-color="rgba(124,124,124,0.25)" data-display-logo="false" data-display-track-button="false"></a>                  
                         </div>
                      </div>
-                    
-                    <div class="chastity">
-                        <button class="band chastity">Chastity Belt</button>
-                        <div class="chastity-script" style="display: none;">
-                            <a href="https://chastity-belt.bandcamp.com/" target="_blank" class="bandcamp">BANDCAMP</a>
-                            <script charset="utf-8" src="https://widget.bandsintown.com/main.min.js"></script><a class="bit-widget-initializer" data-artist-name="Chastity Belt" data-display-local-dates="false" data-display-past-dates="false" data-auto-style="false" data-text-color="#D9D9D9" data-link-color="#B6CC38" data-background-color="rgba(0,0,0,0)" data-display-limit="100" data-display-start-time="false" data-link-text-color="#B6CC38" data-display-lineup="false" data-display-play-my-city="false" data-separator-color="rgba(124,124,124,0.25)" data-display-logo="false" data-display-track-button="false"></a>  
-                        </div>
-                     </div>
 
                     <div class="cloud">
                         <button class="band cloud">Cloud Nothings</button>
@@ -94,14 +86,6 @@
                         </div>
                     </div>
 
-                    <div class="john">
-                        <button class="band john">John</button>
-                        <div class="john-script" style="display: none;">
-                            <a href="https://johntimestwo.bandcamp.com/" target="_blank" class="bandcamp">BANDCAMP</a>
-                            <script charset="utf-8" src="https://widget.bandsintown.com/main.min.js"></script><a class="bit-widget-initializer" data-artist-name="John" data-display-local-dates="false" data-display-past-dates="false" data-auto-style="false" data-text-color="#D9D9D9" data-link-color="#000000" data-background-color="rgba(0,0,0,0)" data-display-limit="100" data-display-start-time="false" data-link-text-color="#B6CC38" data-display-lineup="false" data-display-play-my-city="false" data-separator-color="rgba(124,124,124,0.25)" data-display-logo="false" data-display-track-button="false"></a>  
-                        </div>
-                    </div>
-
                     <div class="julia">
                         <button class="band julia">Julia Holter</button>
                         <div class="julia-script" style="display: none;">
@@ -133,14 +117,6 @@
                             <script charset="utf-8" src="https://widget.bandsintown.com/main.min.js"></script><a class="bit-widget-initializer" data-artist-name="Lysistrata" data-display-local-dates="false" data-display-past-dates="false" data-auto-style="false" data-text-color="#D9D9D9" data-link-color="#000000" data-background-color="rgba(0,0,0,0)" data-display-limit="100" data-display-start-time="false" data-link-text-color="#B6CC38" data-display-lineup="false" data-display-play-my-city="false" data-separator-color="rgba(124,124,124,0.25)" data-display-logo="false" data-display-track-button="false"></a>  
                         </div>
                     </div>
-
-                    <div class="mj">
-                        <button class="band mj">MJ Lenderman</button>
-                        <div class="mj-script" style="display: none;">
-                            <a href="https://mjlenderman.bandcamp.com/" target="_blank" class="bandcamp">BANDCAMP</a>
-                            <script charset="utf-8" src="https://widget.bandsintown.com/main.min.js"></script><a class="bit-widget-initializer" data-artist-name="MJ Lenderman" data-display-local-dates="false" data-display-past-dates="false" data-auto-style="false" data-text-color="#D9D9D9" data-link-color="#000000" data-background-color="rgba(0,0,0,0)" data-display-limit="100" data-display-start-time="false" data-link-text-color="#B6CC38" data-display-lineup="false" data-display-play-my-city="false" data-separator-color="rgba(124,124,124,0.25)" data-display-logo="false" data-display-track-button="false"></a>  
-                        </div>
-                    </div> 
 
                     <div class="model">
                         <button class="band model">Model / Actriz</button>
@@ -214,14 +190,6 @@
                         </div>
                     </div>  
 
-                    <div class="tapir">
-                        <button class="band tapir">Tapir!</button>
-                        <div class="tapir-script" style="display: none;">
-                            <a href="https://tapir-exclamation-mark.bandcamp.com/" target="_blank" class="bandcamp">BANDCAMP</a>
-                            <script charset="utf-8" src="https://widget.bandsintown.com/main.min.js"></script><a class="bit-widget-initializer" data-artist-name="Tapir!" data-display-local-dates="false" data-display-past-dates="false" data-auto-style="false" data-text-color="#D9D9D9" data-link-color="#000000" data-background-color="rgba(0,0,0,0)" data-display-limit="100" data-display-start-time="false" data-link-text-color="#B6CC38" data-display-lineup="false" data-display-play-my-city="false" data-separator-color="rgba(124,124,124,0.25)" data-display-logo="false" data-display-track-button="false"></a>  
-                        </div>
-                     </div>
-
                      <div class="thus">
                         <button class="band thus">Thus Love</button>
                         <div class="thus-script" style="display: none;">
@@ -253,6 +221,35 @@
                             <script charset="utf-8" src="https://widget.bandsintown.com/main.min.js"></script><a class="bit-widget-initializer" data-artist-name="Wednesday" data-display-local-dates="false" data-display-past-dates="false" data-auto-style="false" data-text-color="#D9D9D9" data-link-color="#000000" data-background-color="rgba(0,0,0,0)" data-display-limit="100" data-display-start-time="false" data-link-text-color="#B6CC38" data-display-lineup="false" data-display-play-my-city="false" data-separator-color="rgba(124,124,124,0.25)" data-display-logo="false" data-display-track-button="false"></a>  
                         </div>
                     </div>
+                    <h2>PAST CLIENTS</h2>
+                    <div class="chastity">
+                        <button class="band chastity">Chastity Belt</button>
+                        <div class="chastity-script" style="display: none;">
+                            <a href="https://chastity-belt.bandcamp.com/" target="_blank" class="bandcamp">BANDCAMP</a>
+                            <script charset="utf-8" src="https://widget.bandsintown.com/main.min.js"></script><a class="bit-widget-initializer" data-artist-name="Chastity Belt" data-display-local-dates="false" data-display-past-dates="false" data-auto-style="false" data-text-color="#D9D9D9" data-link-color="#B6CC38" data-background-color="rgba(0,0,0,0)" data-display-limit="100" data-display-start-time="false" data-link-text-color="#B6CC38" data-display-lineup="false" data-display-play-my-city="false" data-separator-color="rgba(124,124,124,0.25)" data-display-logo="false" data-display-track-button="false"></a>  
+                        </div>
+                     </div>
+                     <div class="john">
+                        <button class="band john">John</button>
+                        <div class="john-script" style="display: none;">
+                            <a href="https://johntimestwo.bandcamp.com/" target="_blank" class="bandcamp">BANDCAMP</a>
+                            <script charset="utf-8" src="https://widget.bandsintown.com/main.min.js"></script><a class="bit-widget-initializer" data-artist-name="John" data-display-local-dates="false" data-display-past-dates="false" data-auto-style="false" data-text-color="#D9D9D9" data-link-color="#000000" data-background-color="rgba(0,0,0,0)" data-display-limit="100" data-display-start-time="false" data-link-text-color="#B6CC38" data-display-lineup="false" data-display-play-my-city="false" data-separator-color="rgba(124,124,124,0.25)" data-display-logo="false" data-display-track-button="false"></a>  
+                        </div>
+                    </div>
+                    <div class="mj">
+                        <button class="band mj">MJ Lenderman</button>
+                        <div class="mj-script" style="display: none;">
+                            <a href="https://mjlenderman.bandcamp.com/" target="_blank" class="bandcamp">BANDCAMP</a>
+                            <script charset="utf-8" src="https://widget.bandsintown.com/main.min.js"></script><a class="bit-widget-initializer" data-artist-name="MJ Lenderman" data-display-local-dates="false" data-display-past-dates="false" data-auto-style="false" data-text-color="#D9D9D9" data-link-color="#000000" data-background-color="rgba(0,0,0,0)" data-display-limit="100" data-display-start-time="false" data-link-text-color="#B6CC38" data-display-lineup="false" data-display-play-my-city="false" data-separator-color="rgba(124,124,124,0.25)" data-display-logo="false" data-display-track-button="false"></a>  
+                        </div>
+                    </div> 
+                    <div class="tapir">
+                        <button class="band tapir">Tapir!</button>
+                        <div class="tapir-script" style="display: none;">
+                            <a href="https://tapir-exclamation-mark.bandcamp.com/" target="_blank" class="bandcamp">BANDCAMP</a>
+                            <script charset="utf-8" src="https://widget.bandsintown.com/main.min.js"></script><a class="bit-widget-initializer" data-artist-name="Tapir!" data-display-local-dates="false" data-display-past-dates="false" data-auto-style="false" data-text-color="#D9D9D9" data-link-color="#000000" data-background-color="rgba(0,0,0,0)" data-display-limit="100" data-display-start-time="false" data-link-text-color="#B6CC38" data-display-lineup="false" data-display-play-my-city="false" data-separator-color="rgba(124,124,124,0.25)" data-display-logo="false" data-display-track-button="false"></a>  
+                        </div>
+                     </div>
                 </div>
         </div>
     <%- include('partials/footer') %>
