--- a/views/main.ejs
+++ b/views/main.ejs
@@ -21,29 +21,20 @@ cookieconsent.run({"notice_banner_type":"headline","consent_type":"express","pal
 </script>
 
     <%- include('partials/header') %>
-        <div class="row">
-            <div class="col-xs-2"></div>
-            <div class="col-xs-8 buttons">
-                <button class="btn btn-lg our-services"><a href="/ourservices">FOR BANDS</a></button>
-                <button class="btn btn-lg for-fans"><a href="/forfans">FOR FANS</a></button>
-            </div>
-            <div class="col-xs-2"></div>
-        </div>
-    </div>
     <div class="container-fluid main-text">
         <div class="row">
             <div class="col-xs-2"></div>
-            <div class="col-xs-8 text-center">
+                <div class="col-xs-8 text-center">
+                <div class="row text-center bottom-text">
+                <div class="col-xs-12">
+                <h1>Planning tours is complicated.</h1>
+                <h1>We make it easy.</h1>
+            </div>
+        </div>
+        <div class="bottom-text">
                 <p>Green Room Travel is an independent, full-service, IATA-accredited travel agency designed to bring professional travel planning to the creative community.</p>
                 <p>We work with performers, tour managers, and crew members to plan efficient and cost-effective concert tours and other creative travel.</p>
-            </div>
-            <div class="col-xs-2"></div>
         </div>
-        <div class="row text-center bottom-text">
-            <div class="col-xs-12">
-            <h1>Planning tours is complicated.</h1>
-            <h1>We make it easy.</h1>
-            </div>
         </div>
     </div>
     
