--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -21,13 +21,14 @@
                     </button>
                     <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
                         <ul>
-                        <li><a class="dropdown-item" href="/ourband">our band</a></li>
-                        <li><a class="dropdown-item" href="/realourservices">our services</a></li>
-                        <li><a class="dropdown-item" href="/getintouch">get in touch</a></li>
-                        <li><a class="dropdown-item" href="/ourservices">for bands</a></li>
-                        <li><a class="dropdown-item" href="/forfans">for fans</a></li>
-                        <li><a class="dropdown-item" href="tour">clients on tour</a></li>
-                        <li><a class="dropdown-item" href="/">home</a></li>
+                        <li><a class="dropdown-item" href="/ourband">Our Band</a></li>
+                        <li><a class="dropdown-item" href="/realourservices">How We Work</a></li>
+                        <li><a class="dropdown-item" href="/testimonials">Testimonials</a></li>
+                        <li><a class="dropdown-item" href="/podcasts">Podcasts</a></li>
+                        <li><a class="dropdown-item" href="/playlist">Playlists</a></li>
+                        <li><a class="dropdown-item" href="/getintouch">Get in Touch</a></li>
+                        <li><a class="dropdown-item" href="/tour">Clients/Tour Dates</a></li>
+                        <li><a class="dropdown-item" href="/">Home</a></li>
                         </ul>
                     </div>
                 </div>
@@ -39,19 +40,18 @@
     </div>
     </div>
 
-    <nav class="navbar navbar-inverse navbar-static-top">
+    <nav class="navbar navbar-static-top">
         <div class="container-fluid">
             <div class="row all">
-                <div class="col-xs-4 navbar-left">
-                    <button class="navbar-btn btn-lg our-band"><a href="/ourband">our band</a></button>
-                    <button class="navbar-btn btn-lg"><a href="/realourservices">our services</a></button>
-                </div>
-                <div class="col-xs-4 text-center logo">
+                <div class="navbar">
                     <a href="/"><img class="logo-full" src="/assets/GreenRoom_logo 1.png"></img></a>
-                </div>
-                <div class="col-xs-4 navbar-end text-center">
-                    <button class="navbar-btn btn-lg get-in-touch"><a href="/getintouch">get in touch</a></button>
-                    <button class="navbar-btn btn-lg clients"><a href="/tour">clients on tour</a></button>
+                    <button class=" our-band"><a href="/ourband">Our Band</a></button>
+                    <button class=" "><a href="/realourservices">How We Work</a></button>
+                    <button class=""><a href="/testimonials">Testimonials</a></button>
+                    <button class=""><a href="/podcasts">Podcasts</a></button>
+                    <button class=""><a href="/playlist">Playlists</a></button>
+                    <button class=""><a href="/getintouch">Get in Touch</a></button>
+                    <button class=""><a href="/tour">Clients/Tour Dates</a></button>
                 </div>
             </div>
         </div>
