changing how it works to our services

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -22,7 +22,7 @@
                     <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
                         <ul>
                         <li><a class="dropdown-item" href="/ourband">Our Band</a></li>
-                        <li><a class="dropdown-item" href="/realourservices">How We Work</a></li>
+                        <li><a class="dropdown-item" href="/realourservices">Our Services</a></li>
                         <li><a class="dropdown-item" href="/testimonials">Testimonials</a></li>
                         <li><a class="dropdown-item" href="/podcasts">Podcasts</a></li>
                         <li><a class="dropdown-item" href="/playlist">Playlists</a></li>
@@ -46,7 +46,7 @@
                 <div class="navbar">
                     <a href="/"><img class="logo-full" src="/assets/GreenRoom_logo 1.png"></img></a>
                     <button class=" our-band"><a href="/ourband">Our Band</a></button>
-                    <button class=" "><a href="/realourservices">How We Work</a></button>
+                    <button class=" "><a href="/realourservices">Our Services</a></button>
                     <button class=""><a href="/testimonials">Testimonials</a></button>
                     <button class=""><a href="/podcasts">Podcasts</a></button>
                     <button class=""><a href="/playlist">Playlists</a></button>
