--- a/public/tour.css
+++ b/public/tour.css
@@ -114,6 +114,10 @@ h2 {
     .disintegration {
         margin-top: 1em;
     }
+
+    .edging {
+        margin-top: 1em;
+    }
     
     .frost {
         margin-top: 1em;
