--- a/public/tour.css
+++ b/public/tour.css
@@ -20,7 +20,8 @@ h1 {
 .bit-location:hover,
 .bit-location,
 .bit-venue,
-.bit-venue:hover {
+.bit-venue:hover,
+.bit-details {
     color:#D9D9D9 !important;
     text-decoration: none;
     border: none !important;
@@ -76,7 +77,16 @@ td > a:hover {
 }
 
 .bandcamp {
-    color: #B6CC38;
+    color: #D9D9D9;
+}
+
+.bandcamp:hover {
+    text-decoration: underline;
+     color: #D9D9D9;
+}
+
+.bit-offers-text:hover {
+    text-decoration: underline;
 }
 
 h2 {
