--- a/public/tour.css
+++ b/public/tour.css
@@ -208,6 +208,10 @@ h2 {
         margin-top: 1em;
     }
 
+    .sharlese {
+        margin-top: 1em;
+    }
+
     .snooper {
         margin-top: 1em;
     }
