--- a/views/tour.ejs
+++ b/views/tour.ejs
@@ -182,6 +182,14 @@
                         </div>
                     </div>
 
+                    <div class="sharlese">
+                        <button class="band sharlese">Sharlese</button>
+                        <div class="sharlese-script" style="display: none;">
+                            <a href="https://soundcloud.com/sharlese" target="_blank" class="bandcamp">SOUNDCLOUD</a>
+                            <script charset="utf-8" src="https://widget.bandsintown.com/main.min.js"></script><a class="bit-widget-initializer" data-artist-name="Sharlese" data-display-local-dates="false" data-display-past-dates="false" data-auto-style="false" data-text-color="#D9D9D9" data-link-color="#000000" data-background-color="rgba(0,0,0,0)" data-display-limit="100" data-display-start-time="false" data-link-text-color="#B6CC38" data-display-lineup="false" data-display-play-my-city="false" data-separator-color="rgba(124,124,124,0.25)" data-display-logo="false" data-display-track-button="false"></a>  
+                        </div>
+                     </div>
+
                     <div class="pulp">
                         <button class="band pulp">Slow Pulp</button>
                         <div class="pulp-script" style="display: none;">
