adding new clients

--- a/public/tour.css
+++ b/public/tour.css
@@ -155,6 +155,10 @@ h2 {
     .edging {
         margin-top: 1em;
     }
+
+    .franc {
+        margin-top: 1em;
+    }
     
     .frost {
         margin-top: 1em;
