--- a/views/tour.ejs
+++ b/views/tour.ejs
@@ -78,6 +78,14 @@
                         </div>                                                          
                     </div>
 
+                    <div class="frank">
+                        <button class="band franc">Franc Moody</button>
+                        <div class="franc-script" style="display: none;">
+                            <a href="https://francmoody.bandcamp.com/music" target="_blank" class="bandcamp">BANDCAMP</a>
+                            <script charset="utf-8" src="https://widget.bandsintown.com/main.min.js"></script><a class="bit-widget-initializer" data-artist-name="Franc Moody" data-display-local-dates="false" data-display-past-dates="false" data-auto-style="false" data-text-color="#D9D9D9" data-link-color="#000000" data-background-color="rgba(0,0,0,0)" data-display-limit="100" data-display-start-time="false" data-link-text-color="#B6CC38" data-display-lineup="false" data-display-play-my-city="false" data-separator-color="rgba(124,124,124,0.25)" data-display-logo="false" data-display-track-button="false"></a>  
+                        </div>
+                     </div>
+
                     <div class="frost">
                         <button class="band frost">Frost Children</button>
                         <div class="frost-script" style="display: none;">
@@ -91,6 +99,14 @@
                         <div class="genn-script" style="display: none;">
                             <a href="https://genntheband.bandcamp.com/" target="_blank" class="bandcamp">BANDCAMP</a>
                             <script charset="utf-8" src="https://widget.bandsintown.com/main.min.js"></script><a class="bit-widget-initializer" data-artist-name="id_3942144" data-display-local-dates="false" data-display-past-dates="false" data-auto-style="false" data-text-color="#D9D9D9" data-link-color="#000000" data-background-color="rgba(0,0,0,0)" data-display-limit="100" data-display-start-time="false" data-link-text-color="#B6CC38" data-display-lineup="false" data-display-play-my-city="false" data-separator-color="rgba(124,124,124,0.25)" data-display-logo="false" data-display-track-button="false"></a>  
+                        </div>
+                     </div>
+
+                     <div class="geordie">
+                        <button class="band geordie">Geordie Greep</button>
+                        <div class="geordie-script" style="display: none;">
+                            <a href="https://geordiegreep.bandcamp.com/album/the-new-sound" target="_blank" class="bandcamp">BANDCAMP</a>
+                            <script charset="utf-8" src="https://widget.bandsintown.com/main.min.js"></script><a class="bit-widget-initializer" data-artist-name="Geordie Greep" data-display-local-dates="false" data-display-past-dates="false" data-auto-style="false" data-text-color="#D9D9D9" data-link-color="#000000" data-background-color="rgba(0,0,0,0)" data-display-limit="100" data-display-start-time="false" data-link-text-color="#B6CC38" data-display-lineup="false" data-display-play-my-city="false" data-separator-color="rgba(124,124,124,0.25)" data-display-logo="false" data-display-track-button="false"></a>  
                         </div>
                      </div>
 
