adding a lazrus soul

--- a/public/tour.css
+++ b/public/tour.css
@@ -127,6 +127,10 @@ h2 {
     .fifteen {
         margin-top: 0em;
     }
+
+    .lazarus {
+        margin-top: 1em;
+    }
     
     .billie {
         margin-top: 1em;
