--- a/views/tour.ejs
+++ b/views/tour.ejs
@@ -22,6 +22,14 @@
                         </div>
                      </div>
 
+                    <div class="lazarus">
+                        <button class="band lazarus">A Lazarus Soul</button>
+                        <div class="lazarus-script" style="display: none;">
+                            <a href="https://alazarussoul.bandcamp.com/music" target="_blank" class="bandcamp">BANDCAMP</a>
+                            <script charset="utf-8" src="https://widget.bandsintown.com/main.min.js"></script><a class="bit-widget-initializer" data-artist-name="A Lazarus Soul" data-display-local-dates="false" data-display-past-dates="false" data-auto-style="false" data-text-color="#D9D9D9" data-link-color="#B6CC38" data-background-color="rgba(0,0,0,0)" data-display-limit="100" data-display-start-time="false" data-link-text-color="#B6CC38" data-display-lineup="false" data-display-play-my-city="false" data-separator-color="rgba(124,124,124,0.25)" data-display-logo="false" data-display-track-button="false"></a>
+                        </div>
+                     </div>
+
                      <div class="billie">
                         <button class="band billie">Billie Marten</button>
                         <div class="billie-script" style="display: none;">
